# egui-test-1

./: .gitignore  Cargo.toml  README.md  Settings.yaml  Settings.yaml.example.yaml  compress-db.sql  devlog.md  index.html  unused-features-report.json
assets/: sw.js
sql/: compress-fiction.sql  compress-libgren.sql  convert_db_dump.py
src/: app.rs  config.rs  db.rs  download.rs  icon.rs  lib.rs  main.rs  uifilter.rs
