[package]
name = "rlgdesktop"
version = "0.1.0"
authors = ["Jonathan Newnham <jnnnnn@gmail.com>"]
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = { version = "0.20.1" }
eframe = { version = "0.20.1", features = ["glow", "persistence"], default-features = false }
serde = { version = "1", default-features = false } # You only need this if you want app persistence
egui_extras = "0.20.0"
rusqlite = { version = "0.28.0", features = ["bundled"], default-features = false }
config = { version = "0.13.2" }
crossbeam = { version = "0.8.2", features = ["std"], default-features = false }
fstrings = "0.2.3"
reqwest = { version = "0.11.12", features = ["blocking"] }
regex = { features = ["std"], default-features = false, version = "1.6.0" }
tokio = { version = "1.21.2", default-features = false }
bytes = { default-features = false, version = "1.2.1" }
image = { default-features = false, features = ["png"], version = "0.24.4" }

[dev-dependencies]
once_cell = "1.17.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm
strip = true  # Automatically strip symbols from the binary.

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
