[package]
name = "rlgdesktop"
version = "1.0.0"
authors = [""]
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.20.1" }
eframe = { version = "0.20.1", features = [
    "glow",
    "persistence",
], default-features = false }
egui_extras = { version = "0.20.0" }
serde = { version = "1", default-features = false } # You only need this if you want app persistence
rusqlite = { version = "0.28.0", features = [
    "bundled",
], default-features = false }
config = { version = "^0.13" }
crossbeam = { version = "^0.8", features = ["std"], default-features = false }
fstrings = "^0.2"
reqwest = { version = "^0.11", features = ["blocking"] }
regex = { features = ["std"], default-features = false, version = "1.6.0" }
tokio = { version = "^1.21", default-features = false }
bytes = { default-features = false, version = "1.2.1" }
image = { default-features = false, features = ["png"], version = "0.24.4" }
open = "3"
percent-encoding = "2.2.0"
log = "0.4.17"

[dev-dependencies]
#once_cell = "1.17.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm
strip = true  # Automatically strip symbols from the binary.

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# - this is needed at the moment because of an unreleased bugfix at https://github.com/emilk/egui/blob/37fd141dd189196f673a4281114409f95b13b643/crates/eframe/src/native/run.rs#L433-L434
egui = { git = "https://github.com/emilk/egui", rev = "8ce0e1c", package = "egui" }
eframe = { git = "https://github.com/emilk/egui", rev = "8ce0e1c", package = "eframe" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "8ce0e1c", package = "egui_extras" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
