[package]
name = "rlgdesktop"
version = "1.0.0"
authors = [""]
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.21.0" }
eframe = { version = "0.21.3", features = [
    "glow",
    "persistence",
], default-features = false }
egui_extras = { version = "0.21.0" }
serde = { version = "1", default-features = false } # You only need this if you want app persistence
rusqlite = { version = "0.29.0", features = [
    "bundled",
], default-features = false }
config = { version = "^0.13" }
crossbeam = { version = "^0.8", features = ["std"], default-features = false }
fstrings = "^0.2"
reqwest = { version = "^0.11", features = ["blocking"] }
regex = { features = ["std"], default-features = false, version = "1.6.0" }
tokio = { version = "^1.21", default-features = false }
bytes = { default-features = false, version = "1.2.1" }
image = { default-features = false, features = ["png"], version = "0.24.4" }
open = "4.0.2"
percent-encoding = "2.2.0"
log = "0.4.17"

[dev-dependencies]
#once_cell = "1.17.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm
strip = true  # Automatically strip symbols from the binary.

